Add Pull Request Link

--- a/popup.html
+++ b/popup.html
@@ -35,6 +35,7 @@
     <h3>PR Description Autofill</h3>
     <!-- ID đã đổi từ saveButton thành fillButton cho rõ nghĩa hơn -->
     <button id="fillButton">Fill PR description</button>
+    <button id="pullRequests">Pull Requests</button>
     <script src="popup.js"></script>
 </body>
 
