--- a/public/index.html
+++ b/public/index.html
@@ -163,9 +163,7 @@
                 initialView: 'dayGridMonth',
                 initialDate: '2025-07-30',
                 headerToolbar: {
-                    left: 'prev,next today',
-                    center: 'title',
-                    right: 'dayGridMonth,listWeek'
+                    center: 'title'
                 },
                 events: originalEvents
             });
