--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         <label><input type="checkbox" class="assignee-filter" value="Henry" checked> Henry</label>
         <label><input type="checkbox" class="assignee-filter" value="Karim" checked> Karim</label>
         <label><input type="checkbox" class="assignee-filter" value="Vincent" checked> Vincent</label>
-        <label><input type="checkbox" class="assignee-filter" value="QA" checked> QA</label>
+        <!-- <label><input type="checkbox" class="assignee-filter" value="QA" checked> QA</label> -->
     </div>
     <div id="calendar"></div>
 
@@ -100,9 +100,9 @@
                         }]
                     }
                 },
-                { assignee: "QA", title: 'QA Lead Story', start: '2025-08-04', color: qa },
+                // { assignee: "QA", title: 'QA Lead Story', start: '2025-08-04', color: qa },
                 { assignee: "Vincent", title: 'Related Topics', start: '2025-08-04', end: '2025-08-06', color: dev },
-                { assignee: "QA", title: 'QA Related Topics', start: '2025-08-07', color: qa },
+                // { assignee: "QA", title: 'QA Related Topics', start: '2025-08-07', color: qa },
                 {
                     assignee: "Vincent", title: 'Article Hero', start: '2025-08-06', end: '2025-08-09', color: blocker, detail: {
                         notes: [{
@@ -112,7 +112,7 @@
                         }]
                     }
                 },
-                { assignee: "QA", title: 'QA Article Hero', start: '2025-08-12', color: qa },
+                // { assignee: "QA", title: 'QA Article Hero', start: '2025-08-12', color: qa },
                 // Harvey Bui
                 {
                     assignee: "Harvey",
