Remove data check tab

--- a/public/index.html
+++ b/public/index.html
@@ -74,23 +74,23 @@
             }
             const { dev, qa, blocker } = colors;
             const originalEvents = [
-                {
-                    assignee: "Vincent",
-                    title: 'Data check', start: '2025-07-30', color: '#5bc0de', detail: {
-                        notes: [{
-                            title: "Lead Story",
-                            status: "Blocker",
-                            link: "https://hugeinc.slack.com/archives/C091RQTMYG3/p1753851879630259"
-                        }, {
-                            title: "Related Topics",
-                            status: "New"
-                        }, {
-                            title: "Article Hero",
-                            status: "Blocker",
-                            link: "https://hugeinc.slack.com/archives/C091RQTMYG3/p1753804682604499"
-                        }]
-                    }
-                },
+                // {
+                //     assignee: "Vincent",
+                //     title: 'Data check', start: '2025-07-30', color: '#5bc0de', detail: {
+                //         notes: [{
+                //             title: "Lead Story",
+                //             status: "Blocker",
+                //             link: "https://hugeinc.slack.com/archives/C091RQTMYG3/p1753851879630259"
+                //         }, {
+                //             title: "Related Topics",
+                //             status: "New"
+                //         }, {
+                //             title: "Article Hero",
+                //             status: "Blocker",
+                //             link: "https://hugeinc.slack.com/archives/C091RQTMYG3/p1753804682604499"
+                //         }]
+                //     }
+                // },
                 {
                     assignee: "Vincent", title: 'Lead Story', start: '2025-07-31', end: '2025-08-02', color: blocker, detail: {
                         notes: [{
