--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,14 @@
                     title: "Dynamic News Grid",
                     start: '2025-08-01',
                     end: '2025-08-08',
-                    color: dev
+                    color: blocker,
+                    detail: {
+                        notes: [{
+                            title: "Slack",
+                            status: "Thread",
+                            link: "https://hugeinc.slack.com/archives/C091RQTMYG3/p1753764656522189"
+                        }]
+                    }
                 },
                 // Henry
                 {
