--- a/public/index.html
+++ b/public/index.html
@@ -252,9 +252,9 @@
                 },
                 initialView: 'dayGridMonth',
                 initialDate: '2025-07-30',
-                headerToolbar: {
-                    center: 'title'
-                },
+                // headerToolbar: {
+                //     center: 'title'
+                // },
                 events: originalEvents
             });
             function applyAssigneeFilter() {
