update status related topic

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
                 //     }
                 // },
                 {
-                    assignee: "Vincent", title: 'Lead Story', start: '2025-07-31', end: '2025-08-02', color: blocker, detail: {
+                    assignee: "Vincent", title: 'Lead Story', start: '2025-08-04', end: '2025-08-06', color: blocker, detail: {
                         notes: [{
                             title: "Slack",
                             status: "Thread",
@@ -103,12 +103,15 @@
                 },
                 // { assignee: "QA", title: 'QA Lead Story', start: '2025-08-04', color: qa },
                 {
-                    assignee: "Vincent", title: 'Related Topics', start: '2025-08-04', end: '2025-08-06', color: warning,
+                    assignee: "Vincent", title: 'Related Topics', start: '2025-07-31', end: '2025-08-02', color: warning,
                     detail: {
                         notes: [{
                             title: "Pending",
                             status: "Requesting Design System",
                             link: "https://www.figma.com/design/COi0qpeQqP4ELPZMTEdoLd?node-id=8958-4608&m=dev#1359331885"
+                        },{
+                            title: "Layout",
+                            status: "Working",
                         }]
                     }
                 },
