--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,10 @@
                         },{
                             title: "Layout",
                             status: "Working",
+                        }, {
+                            title: "Ticket",
+                            status: "User Story",
+                            link: "https://dev.azure.com/PepsiCoIT2/CGF_PepsiCocom_Redesign/_boards/board/t/CGF_PepsiCocom_Redesign%20Team/Stories?System.WorkItemType=User%20Story&System.AssignedTo=%40me&System.IterationPath=CGF_PepsiCocom_Redesign%5CDevelopment%20Sprints%5CSprint%204&workitem=12132"
                         }]
                     }
                 },
