--- a/public/index.html
+++ b/public/index.html
@@ -76,23 +76,6 @@
             }
             const { dev, qa, blocker, warning, done } = colors;
             const originalEvents = [
-                // {
-                //     assignee: "Vincent",
-                //     title: 'Data check', start: '2025-07-30', color: '#5bc0de', detail: {
-                //         notes: [{
-                //             title: "Lead Story",
-                //             status: "Blocker",
-                //             link: "https://hugeinc.slack.com/archives/C091RQTMYG3/p1753851879630259"
-                //         }, {
-                //             title: "Related Topics",
-                //             status: "New"
-                //         }, {
-                //             title: "Article Hero",
-                //             status: "Blocker",
-                //             link: "https://hugeinc.slack.com/archives/C091RQTMYG3/p1753804682604499"
-                //         }]
-                //     }
-                // },
                 {
                     assignee: "Vincent", title: 'Lead Story', start: '2025-08-04', end: '2025-08-06', color: warning, detail: {
                         notes: [{
@@ -109,17 +92,12 @@
                         }]
                     }
                 },
-                // { assignee: "QA", title: 'QA Lead Story', start: '2025-08-04', color: qa },
                 {
-                    assignee: "Vincent", title: 'Related Topics', start: '2025-07-31', end: '2025-08-02', color: warning,
+                    assignee: "Vincent", title: 'Related Topics', start: '2025-07-31', end: '2025-08-02', color: done,
                     detail: {
                         notes: [{
-                            title: "Pending",
-                            status: "Requesting Design System",
-                            link: "https://www.figma.com/design/COi0qpeQqP4ELPZMTEdoLd?node-id=8958-4608&m=dev#1359331885"
-                        },{
-                            title: "Layout",
-                            status: "Working",
+                            title: "PR",
+                            status: "Reviewing",
                         }, {
                             title: "Ticket",
                             status: "User Story",
@@ -127,7 +105,6 @@
                         }]
                     }
                 },
-                // { assignee: "QA", title: 'QA Related Topics', start: '2025-08-07', color: qa },
                 {
                     assignee: "Vincent", title: 'Article Hero', start: '2025-08-06', end: '2025-08-09', color: warning, detail: {
                         notes: [{
