--- a/public/index.html
+++ b/public/index.html
@@ -178,7 +178,14 @@
                     title: "Social Profile Links",
                     start: '2025-07-31',
                     end: '2025-08-02',
-                    color: dev
+                    color: warning,
+                    detail: {
+                        notes: [{
+                            title: "Missing field",
+                            status: "Slack Thread",
+                            link: "https://hugeinc.slack.com/archives/C091RQTMYG3/p1753951955880779"
+                        }]
+                    }
                 },
                 {
                     assignee: "Henry",
