--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
             const { dev, qa, blocker, warning, done } = colors;
             const originalEvents = [
                 {
-                    assignee: "Vincent", title: 'Lead Story', start: '2025-08-04', end: '2025-08-06', color: warning, detail: {
+                    assignee: "Vincent", title: 'Lead Story', start: '2025-08-01', end: '2025-08-06', color: warning, detail: {
                         notes: [{
                             title: "Slack",
                             status: "Thread",
@@ -111,6 +111,10 @@
                             title: "Slack",
                             status: "Thread",
                             link: "https://hugeinc.slack.com/archives/C091RQTMYG3/p1753804682604499"
+                        },{
+                            title: "Ticket",
+                            status: "Article Hero",
+                            link: "https://dev.azure.com/PepsiCoIT2/CGF_PepsiCocom_Redesign/_workitems/edit/14260"
                         }, {
                             title: "Point 1",
                             status: "Do we require the clickable link for the Bread Crumb ?"
@@ -156,7 +160,7 @@
                     title: "Featured News",
                     start: '2025-07-31',
                     end: '2025-08-02',
-                    color: dev
+                    color: done
                 },
                 {
                     assignee: "Karim",
@@ -178,7 +182,7 @@
                     title: "Social Profile Links",
                     start: '2025-07-31',
                     end: '2025-08-02',
-                    color: warning,
+                    color: done,
                     detail: {
                         notes: [{
                             title: "Missing field",
