--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
             const { dev, qa, blocker, warning, done } = colors;
             const originalEvents = [
                 {
-                    assignee: "Vincent", title: 'Lead Story', start: '2025-08-01', end: '2025-08-06', color: warning, detail: {
+                    assignee: "Vincent", title: 'Lead Story', start: '2025-08-01', end: '2025-08-06', color: done, detail: {
                         notes: [{
                             title: "Slack",
                             status: "Thread",
@@ -106,7 +106,7 @@
                     }
                 },
                 {
-                    assignee: "Vincent", title: 'Article Hero', start: '2025-08-06', end: '2025-08-09', color: warning, detail: {
+                    assignee: "Vincent", title: 'Article Hero', start: '2025-08-04', end: '2025-08-09', color: warning, detail: {
                         notes: [{
                             title: "Slack",
                             status: "Thread",
@@ -115,12 +115,6 @@
                             title: "Ticket",
                             status: "Article Hero",
                             link: "https://dev.azure.com/PepsiCoIT2/CGF_PepsiCocom_Redesign/_workitems/edit/14260"
-                        }, {
-                            title: "Point 1",
-                            status: "Do we require the clickable link for the Bread Crumb ?"
-                        }, {
-                            title: "Point 2",
-                            status: "Do we require a toggle to turn on / off for the Social share link ?"
                         }]
                     }
                 },
