--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
                     }
                 },
                 {
-                    assignee: "Vincent", title: 'Article Hero', start: '2025-08-04', end: '2025-08-09', color: warning, detail: {
+                    assignee: "Vincent", title: 'Article Hero', start: '2025-08-04', end: '2025-08-07', color: warning, detail: {
                         notes: [{
                             title: "Slack",
                             status: "Thread",
@@ -125,7 +125,7 @@
                     title: "Dynamic Product Grid (All Brands, Filter, Search)",
                     start: '2025-07-30',
                     end: '2025-08-05',
-                    color: dev
+                    color: done
                 },
                 {
                     assignee: "Harvey",
@@ -139,7 +139,7 @@
                     title: "[FE] Dynamic Product Grid (Featured tab)",
                     start: '2025-08-01',
                     end: '2025-08-05',
-                    color: warning,
+                    color: done,
                     detail: {
                         notes: [{
                             title: "Missing field",
@@ -190,7 +190,7 @@
                     title: "ESG Topic Hero",
                     start: '2025-08-04',
                     end: '2025-08-07',
-                    color: warning,
+                    color: done,
                     detail: {
                         notes: [{
                             title: "Slack",
