--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
                     }
                 },
                 {
-                    assignee: "Vincent", title: 'Article Hero', start: '2025-08-04', end: '2025-08-07', color: warning, detail: {
+                    assignee: "Vincent", title: 'Article Hero', start: '2025-08-04', end: '2025-08-07', color: done, detail: {
                         notes: [{
                             title: "Slack",
                             status: "Thread",
