--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
                     title: "Bento Stats (Reuse existing Bento Grid)",
                     start: '2025-08-04',
                     end: '2025-08-06',
-                    color: dev
+                    color: done
                 },
                 {
                     assignee: "Harvey",
