feat(popup): Add Slack message generation button and functionality
- Added a new button "Generate Slack Message" to the popup.html.
- Implemented the `setupGenerateSlackMessage` function in popup.js to:
  - Retrieve the current active tab's URL.
  - Construct a Slack-formatted message with the PR link and a request for review.
  - Copy the generated message to the clipboard.
  - Provide user feedback by changing the button text temporarily.

--- a/popup.html
+++ b/popup.html
@@ -181,6 +181,7 @@
         <div class="button-container">
             <button id="fillButton" class="action">Fill PR description</button>
             <button id="pullRequests" class="action">View Pull Requests</button>
+            <button id="generateSlackMessage" class="action">Generate Slack Message</button>
         </div>
     </div>
 
